--- a/ansible/playbooks/init-rocky-chrony.yml
+++ b/ansible/playbooks/init-rocky-chrony.yml
@@ -23,7 +23,8 @@
       assert:
         that:
           - "not no_ansible.stat.exists"
-        msg: "/etc/no-ansible exists - skipping run on this node"
+        success_msg: "We are able to run on this node"
+        fail_msg: "/etc/no-ansible exists - skipping run on this node"
 
   tasks:
     - name: Configure Chrony
